# rules_itest

cmd/svcinit/: main.go
docs/: itest.md
private/: itest.bzl
runner/: runner.go  service_instance.go
svcctl/: svcctl.go
svclib/: types.go
tests/shutdown/: BUILD.bazel
tests/test_env/: BUILD.bazel  env_test.go
